// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card header bottom padding should be 0rem when body is present 1`] = `
.c3 {
  position: relative;
}

.c5 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  background-color: #fff;
}

.c1 {
  padding: 1.5em 1.5em 0em;
  border-radius: 0.25rem 0.25rem 0rem 0rem;
  font-weight: bold;
  color: #252D34;
}

.c2 {
  padding: 1.5em 1.5em;
  color: #51575D;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  >
    <div
      class=" c1"
    >
      Header
    </div>
    <div
      class=" c2"
    >
      Body
    </div>
    <div
      class="c3 c4"
    >
      <svg
        class="c5"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card header bottom padding should be 0rem when footer is present 1`] = `
.c3 {
  position: relative;
}

.c5 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  background-color: #fff;
}

.c1 {
  padding: 1.5em 1.5em 0em;
  border-radius: 0.25rem 0.25rem 0rem 0rem;
  font-weight: bold;
  color: #252D34;
}

.c2 {
  padding: 1em 1.5em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  color: #9FA2A5;
  border-radius: 0rem 0rem 0.25rem 0.25rem;
}

.c4 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  >
    <div
      class=" c1"
    >
      Header
    </div>
    <div
      class=" c2"
    >
      Footer
    </div>
    <div
      class="c3 c4"
    >
      <svg
        class="c5"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card header bottom padding should be 1.5rem without body and footer 1`] = `
.c2 {
  position: relative;
}

.c4 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  background-color: #fff;
}

.c1 {
  padding: 1.5em 1.5em;
  border-radius: 0.25rem 0.25rem 0rem 0rem;
  font-weight: bold;
  color: #252D34;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  >
    <div
      class=" c1"
    >
      Header
    </div>
    <div
      class="c2 c3"
    >
      <svg
        class="c4"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card shows Card with default feedback 1`] = `
.c1 {
  position: relative;
}

.c3 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  background-color: #fff;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  >
    <div
      class="c1 c2"
    >
      <svg
        class="c3"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card shows Card with default props 1`] = `
.c1 {
  position: relative;
}

.c3 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  background-color: #fff;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  >
    <div
      class="c1 c2"
    >
      <svg
        class="c3"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card shows Card with non-default elevation 1`] = `
.c1 {
  position: relative;
}

.c3 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.075rem 0.75rem rgba(20,22,31,0.374));
  filter: drop-shadow(0rem 0.075rem 0.75rem rgba(20,22,31,0.374));
  background-color: #fff;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="3"
  >
    <div
      class="c1 c2"
    >
      <svg
        class="c3"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card shows Card with ripple feedback and no onClick 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  background-color: #fff;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  />
</div>
`;

exports[`Card shows Card with ripple feedback with onClick 1`] = `
.c1 {
  position: relative;
}

.c3 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  background-color: #fff;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  >
    <div
      class="c1 c2"
    >
      <svg
        class="c3"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card shows Card with simple feedback and no onClick 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  background-color: #fff;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  />
</div>
`;

exports[`Card shows Card with simple feedback with onClick 1`] = `
.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1em;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  contain: layout;
  -webkit-filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  filter: drop-shadow(0rem 0.067rem 0.25rem rgba(20,22,31,0.429));
  background-color: #fff;
}

.c0:active {
  background-color: #e6e6e6;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  />
</div>
`;
